# VM2

./: .gitignore  .gitmodules  CMakeLists.txt  VM.cpp  VM.h  VM_binaries.h  assembler.cpp  build_static_call_list.sh  disassembler.cpp  main.cpp  opcodes.h
arduino-runtime/: VM.cpp  VM.h  VMLib.h  VM_binaries.h  arduino-runtime.ino  dueBuild.sh  libtest.cpp  mBitBuild.sh  opcodes.h  value.h
libraries/: VMLib.h
libraries/test/: bundle_CMakeLists.txt  libtest.cpp
